page 3(section) is ongoing

--- a/app.json
+++ b/app.json
@@ -56,5 +56,9 @@
   "debug": false,
   "style": "v2",
   "sitemapLocation": "sitemap.json",
-  "themeLocation": "theme.json"
+  "themeLocation": "theme.json",
+  "usingComponents": {
+    
+    
+  }
 }
