--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
     "pages/my/org-admin/org-info/org-info",
     "pages/my/org-admin/org-people/org-people",
     "pages/my/my-account/my-account",
-    "pages/sections/forum-detail/forum-detail"
+    "pages/sections/forum-detail/forum-detail",
+    "pages/my/feedback/feedback"
   ],
   "window": {
     "backgroundTextStyle": "light",
