--- a/app.json
+++ b/app.json
@@ -83,6 +83,7 @@
     "i-panel": "/lib/iview/dist/panel/index",
     "i-cell-group": "/lib/iview/dist/cell-group/index",
     "i-cell": "/lib/iview/dist/cell/index",
+    "i-button": "/lib/iview/dist/button/index",
 
     "van-search": "lib/vant-weapp/search/index",
     "van-panel": "lib/vant-weapp/panel/index",
