--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/my/new-act/new-act",
-          "pathName": "pages/my/new-act/new-act",
+          "name": "pages/my/my-act/my-act",
+          "pathName": "pages/my/my-act/my-act",
           "query": "",
           "scene": null
         }
