--- a/app.json
+++ b/app.json
@@ -90,7 +90,8 @@
     "van-cell": "lib/vant-weapp/cell/index",
     "van-cell-group": "lib/vant-weapp/cell-group/index",
     "van-field": "lib/vant-weapp/field/index",
-    "van-button": "lib/vant-weapp/button/index"
+    "van-button": "lib/vant-weapp/button/index",
+    "van-rate" : "lib/vant-weapp/rate/index"
 
   }
 }
