--- a/app.json
+++ b/app.json
@@ -18,7 +18,6 @@
     "pages/sections/org-list/org-list",
     "pages/my/feedback/feedback",
     "pages/sections/org-list/search/search",
-    "pages/sections/act-detail/new-comment",
     "pages/sections/act-detail/new-comment/new-comment"
   ],
   "window": {
@@ -82,6 +81,7 @@
     "i-cell-group": "/lib/iview/dist/cell-group/index",
     "i-cell": "/lib/iview/dist/cell/index",
     "i-button": "/lib/iview/dist/button/index",
+    "i-icon": "/lib/iview/dist/icon/index",
     "van-search": "lib/vant-weapp/search/index",
     "van-panel": "lib/vant-weapp/panel/index",
     "van-cell": "lib/vant-weapp/cell/index",
