--- a/app.json
+++ b/app.json
@@ -91,7 +91,7 @@
     "van-cell-group": "lib/vant-weapp/cell-group/index",
     "van-field": "lib/vant-weapp/field/index",
     "van-button": "lib/vant-weapp/button/index",
-    "van-rate": "lib/vant-weapp/rate/index"
-    
+    "van-rate": "lib/vant-weapp/rate/index",
+    "van-icon": "lib/vant-weapp/icon/index"
   }
 }
