--- a/app.json
+++ b/app.json
@@ -95,5 +95,16 @@
     "van-button": "lib/vant-weapp/button/index",
     "van-rate": "lib/vant-weapp/rate/index",
     "van-icon": "lib/vant-weapp/icon/index"
+  },
+  "plugins": {
+    "chooseLocation": {
+      "version": "1.0.6",
+      "provider": "wx76a9a06e5b4e693e"
+    }
+  },
+  "permission": {
+    "scope.userLocation": {
+    "desc": "你的位置信息将用于小程序定位"
+    }
   }
 }
